--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 											</h1>
 											<p>A Traditional Woodworking Platform</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>We are a woodworking studio that is passionate about teaching and studying woodworking techniques of all styles and types. The main focus of Hok Tau woodworking is making teaching everyone that woodworking can be a fun and theraputic way to spend time with friends and family by making and sharing crafts.
+</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
