--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>What we provide
+</h2>
 									</header>
 									<div class="features">
 										<article>
