--- a/index.html
+++ b/index.html
@@ -40,11 +40,8 @@
 											</h1>
 											<p>A Traditional Woodworking Platform</p>
 										</header>
-										<p>We are a woodworking studio that is passionate about teaching and studying woodworking techniques of all styles and types. The main focus of Hok Tau woodworking is making teaching everyone that woodworking can be a fun and theraputic way to spend time with friends and family by making and sharing crafts.
-</p>
-										<p>Here at Hok Tau woodworking, we focus on traditional english woodworking techniques to turn trees into fun and useful objects.
-
-</p>
+										<p>We are a woodworking studio that is passionate about teaching and studying woodworking techniques of all styles and types. The main focus of Hok Tau woodworking is making teaching everyone that woodworking can be a fun and theraputic way to spend time with friends and family by making and sharing crafts.</p>
+										<p>Here at Hok Tau woodworking, we focus on traditional english woodworking techniques to turn trees into fun and useful objects.</p>
 										<ul class="actions">
 											
 										</ul>
@@ -57,35 +54,28 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>What we provide
-</h2>
+										<h2>What we provide</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-diamond"></span>
 											<div class="content">
-												<h3>A Woodworking platform
-</h3>
-												<p>We provide a space for you to learn how to make your favourite projects.
-</p>
+												<h3>A Woodworking platform</h3>
+												<p>We provide a space for you to learn how to make your favourite projects.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-paper-plane"></span>
 											<div class="content">
-												<h3>Daily Classes
-</h3>
-												<p>Daily classes allows for you to pick the day that you are available.
-</p>
+												<h3>Daily Classes</h3>
+												<p>Daily classes allows for you to pick the day that you are available.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-rocket"></span>
 											<div class="content">
-												<h3>A Creative outlet
-</h3>
-												<p>This space provides all the tools and facilities to explore your creativity
-</p>
+												<h3>A Creative outlet</h3>
+												<p>This space provides all the tools and facilities to explore your creativity</p>
 											</div>
 										</article>
 										<article>
