--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="spoon.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/spoon.jpg" alt="" /></a>
 											<h3>Spoon Carving</h3>
 											<p>Learn how to carve spoons using traditional english green woodworking techniques.</p>
 											<ul class="actions">
@@ -103,7 +103,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="wood stool.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/wood stool.jpg" alt="" /></a>
 											<h3>Stool Construction Workshop</h3>
 											<p>Learn how to make a stool using only handtools.</p>
 											<ul class="actions">
@@ -111,7 +111,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="wood bowl.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/wood bowl.jpg" alt="" /></a>
 											<h3>Bowl Carving</h3>
 											<p>Learn how to operate the treadle lathe to make a Bowl.</p>
 											<ul class="actions">
@@ -119,7 +119,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="chopping board.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/chopping board.jpg" alt="" /></a>
 											<h3>Cutting board</h3>
 											<p>Learn how to make a cutting board using only handtools.</p>
 											<ul class="actions">
@@ -127,7 +127,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="jewelrybox.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/jewelrybox.jpg" alt="" /></a>
 											<h3>Jewelry Box</h3>
 											<p>Learn how to make a jewelry using basic handtools.</p>
 											<ul class="actions">
@@ -135,7 +135,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="toolbox.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/toolbox.jpg" alt="" /></a>
 											<h3>Toolbox</h3>
 											<p>Learn how to make a toolbox using basic handtools.</p>
 											<ul class="actions">
@@ -224,7 +224,7 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p></p>
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="#">information@untitled.tld</a></li>
 										<li class="fa-phone">(000) 000-0000</li>
