--- a/index.html
+++ b/index.html
@@ -226,16 +226,16 @@
 									</header>
 									<p></p>
 									<ul class="contact">
-										<li class="fa-envelope-o"><a href="#">information@untitled.tld</a></li>
-										<li class="fa-phone">(000) 000-0000</li>
-										<li class="fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="fa-envelope-o"><a href="#">hoktauwoodworking@gmail.com</a></li>
+										<li class="fa-phone"> +852 62384825</li>
+										<li class="fa-home">Hok Tau Wai, Fanling, N.T. <br />
+										</li>
 									</ul>
 								</section>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; </a>.</p>
 								</footer>
 
 						</div>
